<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JapaneseAndroidLearnHelper</string>
    <string name="main_menu_dictionary">Słowniczek</string>
    <string name="main_menu_word_test">Test ze słówek</string>
    <string name="main_menu_kanji_test">Test z kanji</string>
    <string name="word_dictionary_view_label">Słowniczek</string>
    <string name="word_dictionary_search_label">Szukana fraza</string>
    <string name="word_dictionary_elements_no">Liczba elementów: %1$d</string>
    <string name="word_dictionary_searching1">Szukanie</string>
    <string name="word_dictionary_searching2">Proszę czekać</string>
    <string name="word_test_kanji_label">Kanji</string>
    <string name="word_test_word_label">Słowo</string>
    <string name="word_test_translate_label">Tłumaczenie</string>
    <string name="word_test_additional_info_label">Dodatkowe informacje</string>
    <string name="word_test_state">Pozycja: %1$d z %2$d</string>
    <string name="word_test_next_button">Dalej</string>
    <string name="word_test_view_label">Test ze słówek</string>
    <string name="word_test_correct">Prawidłowa odpowiedź</string>
    <string name="word_test_incorrect">Niepoprawna odpowiedź.\n\nPrawidłowa odpowiedź to:\n\n</string>
    <string name="word_test_incorrect_ok">OK</string>
    <string name="word_test_summary_result_label">Rezultat</string>
    <string name="word_test_summary_result_value_label">0 %</string>
    <string name="word_test_summary_answers_no_label">Liczba odpowiedzi</string>
    <string name="word_test_summary_answers_no_value_label">0</string>
    <string name="word_test_summary_view_label">Wyniki</string>
    <string name="word_test_summary_correct_answers_no_label">Liczba prawidłowych odpowiedzi</string>
    <string name="word_test_summary_correct_answers_no_value_label">0</string>
    <string name="word_test_summary_incorrect_answers_no_label">Liczba nieprawidłowych odpowiedzi</string>
    <string name="word_test_summary_incorrect_answers_no_value_label">0</string>
    <string name="word_test_group_view_label">Proszę wybrać grupę do testu</string>
    <string name="word_test_group_no">Grupa nr. %1$d</string>
    <string name="word_test_group_start_button">Start</string>
    <string name="report_problem">Zgłoś problem</string>
    <string name="word_dictionary_search_report_problem">Wydzisz błąd, brakuje szukanego słowa, coś można zrobić lepiej, zgłoś problem</string>
    <string name="choose_email_client">Wybierz klienta poczty:</string>
    <string name="word_dictionary_search_report_problem_email_subject">Słowniczek: Problem w wyszukiwaniu</string>
    <string name="word_dictionary_search_report_problem_email_body">Treść problemu:\n\n\n\n***\nInformacje dodatkowe wygenerowane automatycznie:\n---\nWpisana fraza: %1$s\n\n--\nAktualna zawartość listy:\n\n%2$s\n</string>
    <string name="word_dictionary_details">Szczegóły wpisu</string>
    <string name="word_dictionary_details_report_problem">Wydzisz błąd, coś można zrobić lepiej, zgłoś problem</string>
    <string name="word_dictionary_details_kanji_label">Kanji</string>
    <string name="word_dictionary_details_reading_label">Czytanie</string>
    <string name="word_dictionary_details_translate_label">Tłumaczenie</string>
    <string name="word_dictionary_details_additional_info_label">Informacje dodatkowe</string>
</resources>