<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/word_test_summary_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/word_test_summary_result_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_test_summary_result_label" />

        <TextView
            android:id="@+id/word_test_summary_result_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/word_test_summary_result_value_label" />

        <TextView
            android:id="@+id/word_test_summary_answers_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_test_summary_answers_no_label" />

        <TextView
            android:id="@+id/word_test_summary_answers_no_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/word_test_summary_answers_no_value_label" />

    </LinearLayout>

</ScrollView>