<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="right"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/word_dictionary_details_kanji_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:text="@string/word_dictionary_details_kanji_label" />

        <TextView
            android:id="@+id/word_dictionary_details_kanji_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/word_dictionary_details_kana_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:text="@string/word_dictionary_details_kana_label" />

        <TextView
            android:id="@+id/word_dictionary_details_kana_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="12dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/word_dictionary_report_problem_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/report_problem" />

        <TextView
            android:id="@+id/word_dictionary_details_report_problem_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/word_dictionary_details_report_problem" />
    </LinearLayout>

</LinearLayout>